# nv-agent

./: .dockerignore  .env.example  .env.prod.example  .gitignore  AGENTS.md  CLAUDE.md  Caddyfile  Dockerfile  Makefile  README.md  config.py  deploy.sh  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  test-agent.py
.github/workflows/: ci.yml  ci.yml.disabled  docker-publish.yml  pylint.yml  python-app.yml  python-app.yml.disabled
agent/: __init__.py  rag_agent.py  session_store.py
chat/: __init__.py  app.py  auth.py  rate_limit.py  routes.py
chat/ui/: app.js  index.html  style.css
chat/ui/assets/: index-B58cb4jA.css  index-B5bawIhY.css  index-BI-qKehg.css  index-BaU-cSjL.js  index-CK1EJG_o.js  index-CwGfspaK.js  index-DtiWYHgt.js
data/: demo-doc.txt  polished_devops_resume.md  sample.md  test_doc.docx  test_upload.txt
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/chat/: AgentStepIndicator.tsx  InputBar.tsx  MessageItem.tsx  MessageList.tsx  StreamingMessage.tsx  WelcomeState.tsx
frontend/src/components/layout/: AppLayout.tsx
frontend/src/components/modals/: LoginModal.tsx  ResetKBModal.tsx
frontend/src/components/shared/: ModalOverlay.tsx  ToastContainer.tsx
frontend/src/components/sidebar/: KBSection.tsx  SessionsSection.tsx  Sidebar.tsx
frontend/src/context/: AuthContext.tsx  ChatContext.tsx  KBContext.tsx  ToastContext.tsx
frontend/src/hooks/: useAutoResize.ts  useClipboard.ts  useDragDrop.ts  useKeyboardShortcuts.ts
frontend/src/services/: api.ts  markdown.ts
frontend/src/types/: api.ts  chat.ts
frontend/src/utils/: constants.tsx
kb/: __init__.py  chunker.py  embed.py  ingest.py  vector_store.py  vector_store_base.py  vector_store_chromadb.py  vector_store_factory.py  vector_store_faiss.py  vector_store_qdrant.py
tests/: conftest.py  test_api.py  test_chunker.py  test_config.py  test_embed.py  test_ingest.py  test_rag_agent.py  test_session_store.py
