# ── NV-Agent Project Configuration ──────────────────────────
# Covers: ruff (lint+format), mypy (type checking), pytest

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nv-agent"
version = "1.0.0"
description = "Self-hosted RAG AI Agent powered by NVIDIA NIM"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"

[tool.setuptools]
packages = ["kb", "agent", "chat"]
py-modules = ["config", "main"]

# ── Ruff — Linting + Formatting ─────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 100
src = [".", "kb", "agent", "chat", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import ordering)
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument (dataclass field())
    "SIM108", # ternary operator (less readable for complex conditions)
]

[tool.ruff.lint.isort]
known-first-party = ["kb", "agent", "chat", "config"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ── mypy — Type Checking ────────────────────────────────────
# More lenient for CI - core logic is typed, 3rd party libs have incomplete stubs
[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
no_implicit_optional = false
warn_redundant_casts = false
warn_unused_ignores = false
ignore_missing_imports = true
show_error_codes = true

# Ignore 3rd party libs with incomplete/missing stubs
[[tool.mypy.overrides]]
module = ["faiss.*", "PyPDF2.*", "docx.*", "chromadb.*", "qdrant_client.*", "openai.*"]
ignore_errors = true

# Ignore test files - they use mocks extensively
[[tool.mypy.overrides]]
module = ["tests.*", "tests.conftest", "conftest"]
ignore_errors = true

# Ignore specific issues in vector store implementations (FAISS/ChromaDB types)
[[tool.mypy.overrides]]
module = ["kb.vector_store_faiss", "kb.vector_store_chromadb", "kb.vector_store_qdrant", "kb.vector_store_factory", "kb.vector_store_base"]
ignore_errors = true

# Ignore session store datetime issues
[[tool.mypy.overrides]]
module = "agent.session_store"
ignore_errors = true

# Ignore rag_agent OpenAI streaming type issues
[[tool.mypy.overrides]]
module = "agent.rag_agent"
ignore_errors = true

# ── pytest ──────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "unit: Unit tests (no external API calls)",
    "integration: Integration tests (may need NVIDIA API key)",
    "api: FastAPI endpoint tests",
]